add changes in instrution

--- a/src/app/Components/Experts/expert-upload-doc/expert-upload-doc.component.html
+++ b/src/app/Components/Experts/expert-upload-doc/expert-upload-doc.component.html
@@ -91,34 +91,38 @@
   <div class="col-lg-12 col-sm-12">
     <table class="table">
       <thead>
-        <th>File / Image</th>
         <th>Document</th>
+        <th>Document Name</th>
+        <th>Type</th>
         <th>Action</th>
       </thead>
       <tr *ngFor="let doc of expertuploadDocs">
         <td>
-          <div>
-            <img src="" width="100px" height="100px">
+          <div *ngIf="doc.type=='png'">
+            <img [src]="createFilePath(doc.fileContent)" width="100px" height="100px">
           </div>
-        </td>
-        <td>
-          
-          <div class="card mb-4 bg-light-primary border border-primary no-shadow" style="width: 200px;">
-            <div class="card-body p-2">
+          <div *ngIf="doc.type=='docx'|| doc.type=='txt'">
+
+            <div class="card mb-4 bg-light-primary border border-primary no-shadow" style="width: 200px;">
+              <div class="card-body p-2">
                 <div class="media">
-                    <div class="media-body">
-                        <p class="mb-0">Document.pdf</p>
-                        <h5 class="mb-0">21.0 mb</h5>
-                    </div>
-                    <a href="javascript:void(0)" class="icon-rounded icon-40 bg-primary ml-2">
-                        <i class="material-icons text-white">cloud_download</i>
-                    </a>
+                  <div class="media-body">
+                    <p class="mb-0">{{doc.documentName}}.{{doc.type}}</p>
+                  </div>
+                  <a class="icon-rounded icon-40 bg-primary ml-2" (click)="downloadFile(doc.fileContent,doc.documentName)" style="cursor: pointer;">
+                    <i class="material-icons text-white">cloud_download</i>
+                  </a>
                 </div>
+              </div>
             </div>
-        </div>
+          </div>
+
         </td>
         <td>
           {{doc.documentName}}
+        </td>
+        <td>
+          {{doc.type}}
         </td>
         <td>
           <button class="btn danger-gradient px-3 btn-sm" (click)="deleteExpertDocuments(doc.id)">Delete</button>
