--- a/src/app/Components/Clinics/clinics-clinicplans/clinics-clinicplans.component.html
+++ b/src/app/Components/Clinics/clinics-clinicplans/clinics-clinicplans.component.html
@@ -20,22 +20,18 @@
               <div class="col-lg-6 col-md-6">
                 <div class="form-group ">
                   <label>Expert Type</label>
-                  <select class="form-control" (change)="getExperts($event.target.value)">
-                    <option value="">Select Option</option>
-                    <option *ngFor="let type of expertTypes" value="{{type.expertTypeID}}">{{type.expertCategories}}
-                    </option>
-                  </select>
+                  <select2 [data]="expertTypes" [cssImport]="true" (valueChanged)="getExperts($event)" width="100%">
+                  </select2>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6">
                 <div class="form-group ">
                   <label>Expert</label>
-                  <select class="form-control" (change)="getAvailabilityDays($event.target.value)"
-                    formControlName="expertID" [ngClass]="{'is-invalid': clinicPlansForm.get('expertID').errors && (clinicPlansForm.get('expertID').touched
-                   ||clinicFormSubmit)}">
+                  <select2 [data]="experts" [cssImport]="true" (valueChanged)="getAvailabilityDays($event)"
+                   [ngClass]="{'is-invalid': clinicPlansForm.get('expertID').errors && (clinicPlansForm.get('expertID').touched
+                   ||clinicFormSubmit)}" width="100%">
                     <option value="">Select Option</option>
-                    <option *ngFor="let expert of experts" value="{{expert.id}}">{{expert.firstName}}</option>
-                  </select>
+                  </select2>
                   <div class="invalid-feedback"
                     *ngIf="(clinicPlansForm.get('expertID').touched||clinicFormSubmit) && clinicPlansForm.get('expertID').hasError('required')">
                     This field is required
@@ -62,10 +58,15 @@
                 </agm-map>
               </div>
             </div>
-            <div class="row mt-3">
+            <div class="row mt-3 mb-3 border-bottom border-top">
               <div class="col-lg-12 col-md-12">
                 <div class="form-group ">
-                  <label>Venues Location</label>
+                  
+                  <label>
+                    Venue Location 
+                    <button type="button" class="btn btn-link" (click)="getNearestLocation(templateShowLocationList)">Select Venue</button>
+                  </label>
+
                   <div class="media" *ngIf="selectedVenueLocation">
                     <div class="text-success mr-3">
                       <i class="material-icons">check</i>
@@ -73,13 +74,9 @@
                     <div class="media-body">
                       <h6 class="my-0 text-truncated">{{selectedVenueLocation.mapAddress}}</h6>
                       <span class="small mr-2">Name: {{selectedVenueLocation.name}}</span>
-                      <span class="small mr-2">Lat: {{selectedVenueLocation.mapLat}}</span>
-                      <span class="small mr-2">Long: {{selectedVenueLocation.mapLong}}</span>
+                      <span class="small mr-2">Distance: {{selectedVenueLocation.distance}}</span>
+                      <span class="small mr-2">Duration: {{selectedVenueLocation.duration}}</span>
                     </div>
-                  </div>
-                  <div class="invalid-feedback"
-                    *ngIf="(clinicPlansForm.get('locationAddressID').touched||clinicFormSubmit) && clinicPlansForm.get('locationAddressID').hasError('required')">
-                    This field is required
                   </div>
                 </div>
               </div>
@@ -88,13 +85,10 @@
               <div class="col-lg-6 col-md-6">
                 <div class="form-group ">
                   <label>Availability Days</label>
-                  <select class="form-control" formControlName="expertClinicAvailablityDaysID"
-                    (change)="changeAvailability($event.target.value)" [ngClass]="{'is-invalid': clinicPlansForm.get('expertClinicAvailablityDaysID').errors && (clinicPlansForm.get('expertClinicAvailablityDaysID').touched
-                  ||clinicFormSubmit)}">
-                    <option value="">Select Option</option>
-                    <option *ngFor="let availability of expertAvalabilites" value="{{availability.id}}">
-                      {{availability.days}}</option>
-                  </select>
+                  <select2 [data]="avalabilites" [cssImport]="true" width="100%"
+                    (valueChanged)="changeAvailability($event)" [ngClass]="{'is-invalid': clinicPlansForm.get('expertClinicAvailablityDaysID').errors && (clinicPlansForm.get('expertClinicAvailablityDaysID').touched
+                     ||clinicFormSubmit)}">
+                  </select2>
 
                   <div class="invalid-feedback"
                     *ngIf="(clinicPlansForm.get('expertClinicAvailablityDaysID').touched||clinicFormSubmit) && clinicPlansForm.get('expertClinicAvailablityDaysID').hasError('required')">
@@ -181,8 +175,8 @@
           <div class="media-body">
             <h6 class="my-0 text-truncated">{{location.mapAddress}}</h6>
             <span class="small mr-2">Name: {{location.name}}</span>
-            <span class="small mr-2">Lat: {{location.mapLat}}</span>
-            <span class="small mr-2">Long: {{location.mapLong}}</span>
+            <span class="small mr-2">Distance: {{location.distance}}</span>
+            <span class="small mr-2">Duration: {{location.duration}}</span>
           </div>
 
           <div class="text-right footable-last-visible mr-2" style="display: table-cell;">
