--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -152,6 +152,9 @@
                     <a routerLink="/IndoxCMS/Intruction/List" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>
                             Instructions</span></a>
+                    <a routerLink="/IndoxCMS/Intruction/InstructionsState" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>
+                            Instructions State</span></a>
                     <a routerLink="/MedcoCMS/DNA_List" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>DNA List</span></a>
                     <a routerLink="/MedcoCMS/DNA_History" class="nav-link pink-gradient-active"><i
