--- a/src/app/Components/Experts/experts-draft-list/experts-draft-list.component.html
+++ b/src/app/Components/Experts/experts-draft-list/experts-draft-list.component.html
@@ -50,7 +50,7 @@
                           </tr>
                       </thead>
                       <tbody>
-                          <tr *ngFor="let item of expertDraftProfiles; let i=index;">
+                          <tr *ngFor="let item of expertDraftProfiles | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i=index;">
                               <th scope="row">{{i+1}}</th>
                               <td>{{item.firstName}}</td>
                               <td>{{item.lastName}}</td>
@@ -63,6 +63,9 @@
                           </tr>
                       </tbody>
                   </table>
+                  <ul class="pagination">
+                    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                  </ul>
               </div>
           </div>
       </div>
