--- a/src/app/Components/Experts/experts-list/experts-list.component.html
+++ b/src/app/Components/Experts/experts-list/experts-list.component.html
@@ -61,7 +61,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let item of filterList; let i=index;">
+                            <tr *ngFor="let item of filterList | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i=index;">
                                 <th scope="row">{{i+1}}</th>
                                 <td>{{item.firstName}}</td>
                                 <td>{{item.lastName}}</td>
@@ -94,6 +94,9 @@
                             </tr>
                         </tbody>
                     </table>
+                    <ul class="pagination">
+                        <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                      </ul>
                 </div>
             </div>
         </div>
