--- a/src/app/Components/Instruction Main/instruction-list/instruction-list.component.html
+++ b/src/app/Components/Instruction Main/instruction-list/instruction-list.component.html
@@ -41,22 +41,24 @@
                       <thead>
                           <tr>
                               <th scope="col">Sr.#</th>
-                              <th scope="col">First Name</th>
-                              <th scope="col">Last Name</th>
-                              <th scope="col">Occupation</th>
-                              <th scope="col">Gender</th>
-                              <th scope="col">DOB</th>
-                              <th scope="col">Mobile Number</th>
-                              <th scope="col">Post Code</th>
-                              <th scope="col">Actions</th>
+                              <th scope="col" width="10%">First Name</th>
+                              <th scope="col" width="10%">Last Name</th>
+                              <th scope="col" width="10%">InstructionCode</th>
+                              <th scope="col" width="10%">MedicoRef</th>
+                              <th scope="col" width="10%">Gender</th>
+                              <th scope="col" width="10%">DOB</th>
+                              <th scope="col" width="10%">Mobile Number</th>
+                              <th scope="col" width="10%">Post Code</th>
+                              <th scope="col" width="20%">Actions</th>
                           </tr>
                       </thead>
                       <tbody>
-                          <tr *ngFor="let item of instructions; let i=index;">
+                          <tr *ngFor="let item of instructions | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i=index;">
                               <th scope="row">{{i+1}}</th>
                               <td>{{item.firstName}}</td>
                               <td>{{item.lastName}}</td>
-                              <td>{{item.occupationID}}</td>
+                              <td>{{item.instructionCode}}</td>
+                              <td>{{item.medicoRefNo}}</td>
                               <td>{{item.gender}}</td>
                               <td>{{item.dob | date:'mediumDate'}}</td>
                               <td>{{item.mobileNumber}}</td>
@@ -68,6 +70,9 @@
                           </tr>
                       </tbody>
                   </table>
+                  <ul class="pagination">
+                    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                  </ul>
               </div>
           </div>
       </div>
