--- a/src/app/Components/Referrer/referrer-list/referrer-list.component.html
+++ b/src/app/Components/Referrer/referrer-list/referrer-list.component.html
@@ -51,7 +51,7 @@
                           </tr>
                       </thead>
                       <tbody>
-                          <tr *ngFor="let item of referrerPersonalInfo; let i =index;">
+                          <tr *ngFor="let item of referrerPersonalInfo | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i =index;">
                               <th scope="row">{{item.id}}</th>
                               <td>{{item.description}}</td>
                               <td>{{item.referrerCode}}</td>
@@ -65,6 +65,9 @@
                           <tr>
                       </tbody>
                   </table>
+                  <ul class="pagination">
+                    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                  </ul>
               </div>
           </div>
       </div>
