--- a/src/app/Components/Venue Location/venue-location-list/venue-location-list.component.html
+++ b/src/app/Components/Venue Location/venue-location-list/venue-location-list.component.html
@@ -53,7 +53,7 @@
                           </tr>
                       </thead>
                       <tbody>
-                          <tr *ngFor="let loc of locationAddress; let i = index;">
+                          <tr *ngFor="let loc of locationAddress | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i = index;">
                               <th scope="row">{{i+1}}</th>
                               <td>{{loc.name}}</td>
                               <td>{{loc.countryName}}</td>
@@ -73,6 +73,9 @@
                           </tr>
                       </tbody>
                   </table>
+                  <ul class="pagination">
+                    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                  </ul>
             </div>
           </div>
       </div>
