--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -123,6 +123,8 @@
                 <li class="nav-item">
                     <a routerLink="/Clinics/Outstanding_Clinic_List" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span> List</span></a>
+                            <a routerLink="/Clinics/TodayClinics" class="nav-link pink-gradient-active"><i
+                                class="material-icons icon"></i><span> Today Clinics</span></a>
                     <a routerLink="/Clinics/Clinic_Availability_Status" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>Availability Status</span></a>
                     <a routerLink="/Clinics/Clinic_Fill_Analysis" class="nav-link pink-gradient-active"><i
